[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "audio-separator"
version = "0.16.3"
description = "Easy to use audio stem separation, using various models from UVR trained primarily by @Anjok07"
authors = ["Andrew Beveridge <andrew@beveridge.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "audio_separator"}]
homepage = "https://github.com/karaokenerds/python-audio-separator"
repository = "https://github.com/karaokenerds/python-audio-separator"
documentation = "https://github.com/karaokenerds/python-audio-separator/blob/main/README.md"
keywords = ["audio", "sound", "karaoke"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.9"
requests = ">=2"
numpy = ">=1.23"
librosa = ">=0.10"
samplerate = "0.1.0"
six = ">=1.16"
torch = "*"
tqdm = "*"
onnx = ">=1.14"
onnx2torch = ">=1.5"
onnxruntime = { version = ">=1.17", optional = true }
onnxruntime-gpu = { version = ">=1.17", optional = true }
julius = ">=0.2"
diffq = ">=0.2"
einops = ">=0.7"
pyyaml = "*"
ml_collections = "*"
beautifulsoup4 = "*"
ffmpeg-python = ">=0.2.0"
wget = "*"
faiss-cpu = "1.7.3"
pydub = "0.25.1"
pyworld = "0.3.4"
praat-parselmouth = "0.4.2"
resampy = "0.4.2"
scipy = "1.11.1"
sounddevice = "0.4.6"
soundfile = "0.12.1"
noisereduce = "*"
torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.2.2%2Bcu121-cp310-cp310-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.17.2%2Bcu121-cp310-cp310-linux_x86_64.whl"}
fairseq = "*"
numba = "*"
torchcrepe = "0.0.21"
torchgen = ">=0.0.1"
torch_directml = "*"
local-attention = "*"
matplotlib = "3.7.2"
tensorboard = "*"
ffmpy = "0.3.1"
tensorboardX = "*"
edge-tts = "6.1.9"
pydantic = "*"
fastapi = "*"
uvicorn = "*"

[tool.poetry.extras]
cpu = ["onnxruntime"]
gpu = ["onnxruntime-gpu"]

[tool.poetry.scripts]
audio-separator = 'audio_separator.utils.cli:main'

[tool.poetry.group.dev.dependencies]
black = ">=23"
pytest = "*"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 140
